# undergraduate_project

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  TodoList.md  cluster.conf
doc/: ClusterConf.md  EnvVar.md  Prerequisites.md  ProgrammingRules.md
include/: bitmap.hpp  commons.hpp  config.hpp  datablock.hpp  debug.hpp  ecal.hpp
include/ec/: clay.hpp  ec.hpp  lrc.hpp  rs.hpp
include/fs/: DMStore.h  EntryList.h  FMStore.h  KVStore.h  LocofsClient.h  dms.hpp  entrylist.hpp  inode.hpp  kvdb.hpp  kvstore.hpp  lru_cache.h
include/network/: message.hpp  msg.hpp  netif.hpp  rdma.hpp  rpc.hpp
modules/: FindFUSE.cmake  FindPmem.cmake
src/: config.cpp  ecal.c  ecal.cpp  inode.c  main.c  main.cpp
src/ecal/: ecal.c
src/fs/: DMServer.cpp  DMStore.cpp  DataServer.cpp  EntryList.cpp  FMServer.cpp  FMStore.cpp  KVStore.cpp  LocofsClient.cpp  dms.cpp  entrylist.cpp  kvdb.cpp  kvstore.cpp
src/global/: alloc_table.c  alloctable.c  config.c  config.cpp
src/include/: alloc_table.h  alloctable.h  alloctable.hpp  cluster.h  common.h  common.hpp  commons.h  commons.hpp  config.h  config.hpp  debug.h  debug.hpp  ecal.h  ecal.hpp  hashtable.hpp  inode.h  message.h  message.hpp  rdma.h  rdma.hpp  rpc.hpp
src/network/: cluster.c  netif.cpp  rdma.c  rdma.cpp  rpc.cpp
src/test/: block_rw.cpp  block_rw_test.cpp  ec_type2.cpp  ec_type2_test.cpp  ecal_none.cpp  ecal_repl.cpp
